# tailscale-outbound-proxy

./: Cargo.toml  Dockerfile  index.yaml  ssh-command.txt
.github/workflows/: docker-image.yml  release.yml
charts/tailscale-outbound-proxy/: Chart.yaml  local-deploy.sh  values.yaml
charts/tailscale-outbound-proxy/templates/: crds.yaml  operator.yaml
examples/: replace-admin-service.yaml
src/: finalizers.rs  main.rs  replace_service_reconciler.rs  replaced_service.rs  tailscale_api.rs
