[package]
name = "tailscale-outbound-proxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.82.2", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }
kube-runtime = {version = "0.82.2", default-features = false, features = ["unstable-runtime-stream-control"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
anyhow = { version = "1.0", features = ["backtrace", "std"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls", "rustls-tls"] }
clap = { version = "4.4.0", features = ["env", "derive"] }
oauth2 = "4.4.1"
url = "2.4.0"


[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

